--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ generated*/
 !/trained_models/Generator_I_epoch-120000.state
 !/trained_models/GRU_epoch-120000.model
 !/trained_models/GRU_epoch-120000.state
+.idea
